--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
 					<div id="header-hero-image">
 						<div class="header-hero-container">
 							<div class="hero-background"></div>
-							<div class="hero-pack-1"><img src="images/theme/nwl/Pack1.png" alt="" /></div>
-							<div class="hero-pack-2"><img src="images/theme/nwl/Pack2.png" alt="" /></div>
-							<div class="hero-pack-3"><img src="images/theme/nwl/Pack3.png" alt="" /></div>
+							<div class="hero-pack-1"><img src="images/theme/nwl/PACK1.png" alt="" /></div>
+							<div class="hero-pack-2"><img src="images/theme/nwl/PACK2.png" alt="" /></div>
+							<div class="hero-pack-3"><img src="images/theme/nwl/PACK3.png" alt="" /></div>
 							<div class="hero-splatter-1"><span class="icon_splatter_1"></span></div>
 							<div class="hero-splatter-2"><span class="icon_splatter_2"></span></div>
 							<div class="hero-brushstroke"><span class="icon_brush_stroke"></span></div>
@@ -192,7 +192,7 @@
 					<div class="content-moments-bg"><span class="icon_brush_stroke"></span></div>
 					<div class="content-icon"><span class="las la-layer-group"></span></div>
 					<h2 class="content-title">Jaire Alexander NFTs</h2>
-					<p>Each pack a unique Jaire Alexander and each pack has a chance for a golden ticket where you would win an unique experience or memrobilia you could win </p>
+					<p>Each pack a unique Jaire Alexander and each pack has a chance for a golden ticket where you would win an unique experience or memorabilia you could win </p>
 					<div class="content-moments-btn">
 						<button class="btn-default btn-primary" id="btn-visit-pack-store" onclick="window.location='store.html'">
 							<span class="btn-text">Visit Pack Store</span>
@@ -242,8 +242,8 @@
 							</div>
 							<div class="moment-pack-image-container">
 								<a href="store.html">
-									<div class="moment-pack-image-1"><img src="images/theme/nwl/Pack1.png" alt=""></div>
-									<div class="moment-pack-image-2"><img src="images/theme/nwl/Pack1.png" alt=""></div>
+									<div class="moment-pack-image-1"><img src="images/theme/nwl/PACK1.png" alt=""></div>
+									<div class="moment-pack-image-2"><img src="images/theme/nwl/PACK1.png" alt=""></div>
 								</a>
 							</div>
 						</div>
@@ -271,8 +271,8 @@
 							</div>
 							<div class="moment-pack-image-container">
 								<a href="store.html">
-									<div class="moment-pack-image-1"><img src="images/theme/nwl/Pack2.png" alt=""></div>
-									<div class="moment-pack-image-2"><img src="images/theme/nwl/Pack2.png" alt=""></div>
+									<div class="moment-pack-image-1"><img src="images/theme/nwl/PACK2.png" alt=""></div>
+									<div class="moment-pack-image-2"><img src="images/theme/nwl/PACK2.png" alt=""></div>
 								</a>
 							</div>
 						</div>
@@ -298,8 +298,8 @@
 							</div>
 							<div class="moment-pack-image-container">
 								<a href="store.html">
-									<div class="moment-pack-image-1"><img src="images/theme/nwl/Pack3.png" alt=""></div>
-									<div class="moment-pack-image-2"><img src="images/theme/nwl/Pack3.png" alt=""></div>
+									<div class="moment-pack-image-1"><img src="images/theme/nwl/PACK3.png" alt=""></div>
+									<div class="moment-pack-image-2"><img src="images/theme/nwl/PACK3.png" alt=""></div>
 								</a>
 							</div>
 						</div>
