--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 					<div class="content-moments-bg"><span class="icon_brush_stroke"></span></div>
 					<div class="content-icon"><span class="las la-layer-group"></span></div>
 					<h2 class="content-title">Jaire Alexander NFTs</h2>
-					<p>Each pack a unique Jaire Alexander and each pack has a chance for a golden ticket where you would win an unique experience or memorabilia you could win </p>
+					<p>Each pack has a unique Jaire Alexander NFT and each pack has a chance to win unique experiences or memorabilia.</p>
 					<div class="content-moments-btn">
 						<button class="btn-default btn-primary" id="btn-visit-pack-store" onclick="window.location='store.html'">
 							<span class="btn-text">Visit Pack Store</span>
