--- a/my-cards.html
+++ b/my-cards.html
@@ -58,7 +58,7 @@
 								<li><a class="nav-link" href="index.html">Home</a></li>
 								<li><a class="nav-link selected" href="my-cards.html">My Cards</a></li>
 								<li><a class="nav-link" href="store.html">Store</a></li>
-								<li><a class="nav-link" href="marketplace.html">Marketplace</a></li>
+								<li><a class="nav-link" href="">Marketplace</a></li>
 								<!-- <li><a class="nav-link" href="how-it-works.html">How it works</a></li> -->
 								<li><a class="nav-link" href="faqs.html">FAQs</a></li>
 							</ul>
@@ -369,7 +369,7 @@
 
 									<div class="col">
 										<div class="card-listing-container">
-											<a class="card-listing-item" href="card-listing.html">
+											<a class="card-listing-item" href="">
 												<span class="card-listing-image-container">
 													<span class="card-listing-image">
 
@@ -401,7 +401,7 @@
 									</div>
 									<div class="col">
 										<div class="card-listing-container">
-											<a class="card-listing-item" href="card-listing.html">
+											<a class="card-listing-item" href="">
 												<span class="card-listing-image-container">
 													<span class="card-listing-image">
 
@@ -478,7 +478,7 @@
 									<div class="footer-title">Product</div>
 									<ul class="footer-links list-reset">
 										<li><a href="store.html">Store</a></li>
-										<li><a href="marketplace.html">Marketplace</a></li>
+										<li><a href="">Marketplace</a></li>
 										<li><a href="press.html">Press</a></li>
 									</ul>
 								</div>
