--- a/pack-details.html
+++ b/pack-details.html
@@ -58,7 +58,7 @@
 								<li><a class="nav-link" href="index.html">Home</a></li>
 								<li><a class="nav-link" href="my-cards.html">My Cards</a></li>
 								<li><a class="nav-link selected" href="store.html">Store</a></li>
-								<li><a class="nav-link" href="marketplace.html">Marketplace</a></li>
+								<li><a class="nav-link" href="">Marketplace</a></li>
 								<!-- <li><a class="nav-link" href="how-it-works.html">How it works</a></li> -->
 								<li><a class="nav-link" href="faqs.html">FAQs</a></li>
 							</ul>
@@ -377,7 +377,7 @@
 									<h3 class="sub-content-title">Latest Sales</h3>
 								</div>
 								<div class="col-auto">
-									<a href="marketplace.html" class="sub-content-title-link">See More</a>
+									<a href="" class="sub-content-title-link">See More</a>
 								</div>
 							</div>
 							
@@ -451,7 +451,7 @@
 									<div class="footer-title">Product</div>
 									<ul class="footer-links list-reset">
 										<li><a href="store.html">Store</a></li>
-										<li><a href="marketplace.html">Marketplace</a></li>
+										<li><a href="">Marketplace</a></li>
 										<li><a href="press.html">Press</a></li>
 									</ul>
 								</div>
