--- a/my-packs.html
+++ b/my-packs.html
@@ -225,7 +225,13 @@
 						<div class="col-12">
 
 							<!-- My Cards Placeholder -->
-							
+							<div class="placeholder-msg" id="no-items-in-my-cards">
+								<div class="inline-msg-icon"><em class="las la-info-circle"></em></div>
+								<div class="inline-msg-text">
+									<h3 class="inline-msg-title">No packs found</h3>
+									<p>You have no unopened packs available, please visit the <a href="store.html">store</a> to purchase one now.</p>
+								</div>
+							</div>
 
 							<!-- My Packs -->
 							
