--- a/pack-details-2.html
+++ b/pack-details-2.html
@@ -173,7 +173,7 @@
 						<div class="col-8_md-6_xs-12">
 
 							<div class="pack-item-content-container">
-								<h1 class="page-title">GB Tickets & Meet Jaire</h1>
+								<h1 class="page-title">Yoga with Jaire</h1>
 								<div class="pack-item-collection">Release 1</div>
 								<div class="pack-item-details">This pack contains 1 card and potentially a golden ticket</div>
 								<div class="pack-item-price">$23.00 <span class="system-currency">USD</span></div>
@@ -229,11 +229,9 @@
 							
 							<h2 class="body-text-title">Pack Details</h2>
 							<div class="wysiwig-content">
-								<p>This NFT is an unique 3D piece of art created representing Jaire’s brand and mindset about how he approaches his life.</p>
-								<p>This NFT pack also potentially contains a golden ticket which gives you a chance to win 2 GreenBay packer tickets and a meet Jaire Alexander after the game</p>
-
+								<p>This NFT contains an unique 3D piece of art created representing Jaire’s brand and mindset about how he approaches his life</p>
+								<p>This NFT pack also potentially contains a golden ticket which a chance to win a live-stream Yoga session with Jaire and an Autographed Jersey</p>
 							</div>
-
 							<div class="margin-bottom-xl"></div>
 						</div>
 						<div class="col-1_xs-12" style="position: relative;">
@@ -247,7 +245,7 @@
 								<div class="padding-top-xl"></div>
 								<ul>
 									<li>1 x Legendary Jiare NFT</li>
-									<li>A chance to win 2 tickets to a Green Bay game and Meet Jaire after the game</li>
+									<li>A chance to win a live-stream Yoga session with Jaire and an Autographed Jersey</li>
 								</ul>
 							</div>
 
