--- a/pack-details-5.html
+++ b/pack-details-5.html
@@ -173,7 +173,7 @@
 						<div class="col-8_md-6_xs-12">
 
 							<div class="pack-item-content-container">
-								<h1 class="page-title">GB Tickets & Meet Jaire</h1>
+								<h1 class="page-title">pLo Merchandise debut</h1>
 								<div class="pack-item-collection">Release 1</div>
 								<div class="pack-item-details">This pack contains 1 card and potentially a golden ticket</div>
 								<div class="pack-item-price">$23.00 <span class="system-currency">USD</span></div>
@@ -230,8 +230,7 @@
 							<h2 class="body-text-title">Pack Details</h2>
 							<div class="wysiwig-content">
 								<p>This NFT is an unique 3D piece of art created representing Jaire’s brand and mindset about how he approaches his life.</p>
-								<p>This NFT pack also potentially contains a golden ticket which gives you a chance to win 2 GreenBay packer tickets and a meet Jaire Alexander after the game</p>
-
+								<p>This NFT pack also potentially contains a golden ticket which gives you a chance to win one of the first 10 limited edition pLo T-shirts created by Jaire</p>
 							</div>
 
 							<div class="margin-bottom-xl"></div>
@@ -247,7 +246,7 @@
 								<div class="padding-top-xl"></div>
 								<ul>
 									<li>1 x Legendary Jiare NFT</li>
-									<li>A chance to win 2 tickets to a Green Bay game and Meet Jaire after the game</li>
+									<li>10 owners of this NFT will win the first ever limited edition pLo T-shirts created by Jaire</li>
 								</ul>
 							</div>
 
