--- a/pack-opening.html
+++ b/pack-opening.html
@@ -204,7 +204,7 @@
 													<span class="card-list-overlay">
 														<span class="card-list-details-shading"></span>
 														<span class="card-list-details-rarity type-lvl3">Legend</span>
-														<span class="card-list-details-name">NFT Card 1</span>
+														<span class="card-list-details-name">Jaire Alexander</span>
 														<span class="card-list-details-team-logo"><img src="images/theme/nwl/logo.png" alt="Madison Mallards" /></span>
 														<span class="card-list-details-distribution"><span class="card-list-details-distribution-value">723</span><span class="card-list-details-distribution-total">1000</span></span>
 													</span>
@@ -218,9 +218,9 @@
 											</span>
 											<span class="card-listing-text">
 												<span class="card-listing-circulation"><span class="type-le" title="Limited Edition: Count is Final">LE</span></span>
-												<span class="card-listing-name"><strong>NFT Card1</strong></span>
+												<span class="card-listing-name"><strong>Jaire Alexander</strong></span>
 												
-												<span class="card-listing-title">This NFT reflects Jaire's attitude and approach to life</span>
+												<span class="card-listing-title">This NFT is an unique 3D piece of art created representing Jaire’s pLo brand and mindset about how he approaches his life</span>
 												<span class="card-listing-rarity lvl3">Legend</span>
 												<span class="card-listing-distribution"><span class="card-listing-distribution-value">723</span><span class="card-listing-distribution-total">1000</span></span>
 											</span>
@@ -597,9 +597,9 @@
 					<div class="col-5_sm-12">
 						<div class="modal-content">
 							<div class="card-listing-content">
-								<h1 class="card-listing-name">NFT Card 1</h1>
-								<div class="card-listing-title">The first ever Jaire Alexander NFT feature unique 3D art created by XYZ</div>
-								<div class="card-listing-description">This NFT reflects Jaire's attitude and approach to life.</div>
+								<h1 class="card-listing-name">Jaire Alexander</h1>
+								<div class="card-listing-title">First Edition Jaire Alexander pLO NFT</div>
+								<div class="card-listing-description">This NFT is an unique 3D piece of art created representing Jaire’s pLo brand and mindset about how he approaches his life.</div>
 								<div class="card-listing-divider"></div>
 								<div class="card-listing-collection">NFT CARD 1</div>
 								<div class="card-listing-release">Release 1</div>
