--- a/store.html
+++ b/store.html
@@ -178,9 +178,9 @@
 								</div>
 								<div class="featured-item-text-container">
 									<div class="featured-item-type">Featured Pack</div>
-									<div class="featured-item-title"><h2>NFT1</h2></div>
+									<div class="featured-item-title"><h2>GB Tickets & Meet Jaire</h2></div>
 									<div class="featured-item-collection">Release 1</div>
-									<div class="featured-item-details">Get the chance to win 2 tickets to a Packers game!</div>
+									<div class="featured-item-details">Get the chance to win 2 tickets to a Packers game and meet Jaire!</div>
 									<div class="featured-item-price">$23.00 <span class="system-currency">USD</span></div>
 									<div class="featured-item-button">
 										<button type="button" class="btn-default btn-primary" onclick="window.location='pack-details.html'"> 
@@ -285,21 +285,21 @@
 										<span class="pack-item-image"><img src="images/theme/nwl/PACK1.png" alt="" /></span>
 										<span class="pack-item-accent"><span class="icon_brush_stroke"></span></span>
 										<span class="pack-item-text">
-											<span class="pack-item-name">NFT1</span>
+											<span class="pack-item-name">GB Tickets & Meet Jaire</span>
 											<span class="pack-item-collection">Release 1</span>
 											<span class="pack-item-price">$23.00 <span class="system-currency">USD</span></span>
-											<span class="pack-item-distribution">1000 of 1000 left</span>
+											<span class="pack-item-distribution">2300 of 2300 left</span>
 										</span>
 									</a>
 								</div>
 							</div>
 							<div class="col">
 								<div class="pack-item-container">
-									<a href="pack-details.html" title="View Hall of Famers">
+									<a href="pack-details-2.html" title="View Hall of Famers">
 										<span class="pack-item-image"><img src="images/theme/nwl/PACK2.png" alt="" /></span>
 										<span class="pack-item-accent"><span class="icon_brush_stroke"></span></span>
 										<span class="pack-item-text">
-											<span class="pack-item-name">NFT2</span>
+											<span class="pack-item-name">Yoga with Jaire</span>
 											<span class="pack-item-collection">Release 1</span>
 											<span class="pack-item-price">$15.00 <span class="system-currency">USD</span></span>
 											<span class="pack-item-distribution">2500 of 2500 left</span>
@@ -309,25 +309,25 @@
 							</div>
 							<div class="col">
 								<div class="pack-item-container">
-									<a href="pack-details.html" title="View Hall of Famers">
+									<a href="pack-details-3.html" title="View Hall of Famers">
 										<span class="pack-item-image"><img src="images/theme/nwl/PACK3.png" alt="" /></span>
 										<span class="pack-item-accent"><span class="icon_brush_stroke"></span></span>
 										<span class="pack-item-text">
-											<span class="pack-item-name">NFT3</span>
+											<span class="pack-item-name">Go long with a Jaire Football</span>
 											<span class="pack-item-collection">Release 1</span>
 											<span class="pack-item-price">$15.00 <span class="system-currency">USD</span></span>
-											<span class="pack-item-distribution">2000 of 2000 left</span>
+											<span class="pack-item-distribution">2300 of 2300 left</span>
 										</span>
 									</a>
 								</div>
 							</div>
 							<div class="col">
 								<div class="pack-item-container">
-									<a href="pack-details.html" title="View Hall of Famers">
+									<a href="pack-details-4.html" title="View Hall of Famers">
 										<span class="pack-item-image"><img src="images/theme/nwl/PACK4.png" alt="" /></span>
 										<span class="pack-item-accent"><span class="icon_brush_stroke"></span></span>
 										<span class="pack-item-text">
-											<span class="pack-item-name">NFT4</span>
+											<span class="pack-item-name">Jaire Game Helmet</span>
 											<span class="pack-item-collection">Release 1</span>
 											<span class="pack-item-price">$20.00 <span class="system-currency">USD</span></span>
 											<span class="pack-item-distribution">2500 of 2500 left</span>
@@ -337,11 +337,11 @@
 							</div>
 							<div class="col">
 								<div class="pack-item-container">
-									<a href="pack-details.html" title="View Hall of Famers">
+									<a href="pack-details-5.html" title="View Hall of Famers">
 										<span class="pack-item-image"><img src="images/theme/nwl/PACK5.png" alt="" /></span>
 										<span class="pack-item-accent"><span class="icon_brush_stroke"></span></span>
 										<span class="pack-item-text">
-											<span class="pack-item-name">NFT5</span>
+											<span class="pack-item-name">pLo Merchandise debut</span>
 											<span class="pack-item-collection">Release 1</span>
 											<span class="pack-item-price">$10.00 <span class="system-currency">USD</span></span>
 											<span class="pack-item-distribution">2500 of 2500 left</span>
