--- a/my-cards.html
+++ b/my-cards.html
@@ -377,7 +377,7 @@
 															<span class="card-list-details-shading"></span>
 														
 															<span class="card-list-details-rarity type-lvl3">Legednary</span>
-															<span class="card-list-details-name">NFT1 card</span>
+															<span class="card-list-details-name">Jaire Alexander</span>
 															<span class="card-list-details-team-logo"><img src="images/theme/nwl/logo.png" alt="PLO" /></span>
 															<span class="card-list-details-distribution"><span class="card-list-details-distribution-value">723</span><span class="card-list-details-distribution-total">1000</span></span>
 														</span>
@@ -391,8 +391,8 @@
 												</span>
 												<span class="card-listing-text">
 													<span class="card-listing-circulation"><span class="type-cc" title="Circulating Count: Count may change">CC</span></span>
-													<span class="card-listing-name"><strong>NFT1 card</strong></span>
-													<span class="card-listing-title">The first ever Jaire Alexander NFT collection featuring unique 3D art created by XYZ</span>
+													<span class="card-listing-name"><strong>First Edition Jaire Alexander pLO NFT</strong></span>
+													<span class="card-listing-title">This NFT is an unique 3D piece of art created representing Jaire’s pLo brand and mindset about how he approaches his life</span>
 													<span class="card-listing-rarity lvl3">Legendary</span>
 													<span class="card-listing-distribution"><span class="card-listing-distribution-value">723</span><span class="card-listing-distribution-total">1000</span></span>
 												</span>
@@ -408,7 +408,7 @@
 														<span class="card-list-overlay">
 															<span class="card-list-details-shading"></span>
 															<span class="card-list-details-rarity type-lvl2">Rare</span>
-															<span class="card-list-details-name">NFT2 card</span>
+															<span class="card-list-details-name">Jaire Alexnader</span>
 															<span class="card-list-details-team-logo"><img src="images/theme/nwl/logo.png" alt="PLO" /></span>
 															<span class="card-list-details-distribution"><span class="card-list-details-distribution-value">23</span><span class="card-list-details-distribution-total">1500</span></span>
 														</span>
@@ -422,8 +422,8 @@
 												</span>
 												<span class="card-listing-text">
 													<span class="card-listing-circulation"><span class="type-cc" title="Circulating Count: Count may change">CC</span></span>
-													<span class="card-listing-name"><strong>NFT2 card</strong></span>
-													<span class="card-listing-title">The first ever Jaire Alexander NFT collection featuring unique 3D art created by XYZ</span>
+													<span class="card-listing-name"><strong>First Edition Jaire Alexander pLO NFT</strong></span>
+													<span class="card-listing-title">This NFT is an unique 3D piece of art created representing Jaire’s pLo brand and mindset about how he approaches his life</span>
 													<span class="card-listing-rarity lvl2">Rare</span>
 													<span class="card-listing-distribution"><span class="card-listing-distribution-value">23</span><span class="card-listing-distribution-total">1500</span></span>
 												</span>
